Salesforce/objects/agf__ADM_Record_Group__c.object
<CustomObject>
    <fields>
        <fullName>agf__Group_Color__c</fullName>
        <label>Group Color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Parent_Record_Id__c</fullName>
        <label>Parent Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Record_Order__c</fullName>
        <label>Record Order</label>
        <type>TextArea</type>
    </fields>
    <label>Record Group</label>
    <nameField>
        <label>Record Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Record Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>